##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = hbp_knowledge
version = 0.0.4
description = Knowledge curated in BEL from full text during the Human Brain Pharmacome project
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/pharmacome/knowledge
download_url = https://github.com/pharmacome/knowledge/releases
project_urls =
    Bug Tracker = https://github.com/pharmacome/knowledge/issues
    Source Code = https://github.com/pharmacome/knowledge

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT License
# license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems biology
    Networks biology
    Drug repositioning

[options]
install_requires =
    bel_repository>=0.0.5

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = hbp_knowledge

[options.entry_points]
console_scripts =
    hbp-knowledge = hbp_knowledge:main
