##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = conib
version = 0.0.9-dev
description = Curation of Neurodegeneration in BEL (CONIB)
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/pharmacome/conib
download_url = https://github.com/pharmacome/conib/releases
project_urls =
    Bug Tracker = https://github.com/pharmacome/conib/issues
    Source Code = https://github.com/pharmacome/conib

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems biology
    Networks biology
    Drug repositioning

[options]
install_requires =
    pybel>=0.15.0

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = conib

[options.entry_points]
console_scripts =
    conib = conib:main
